added pokemon promise and populateCards function

--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
     </ul>
   </header>
 
+  <div class="wrapper">
+
+    <main class="main">
+      <section class="main__cards-container">
+        
+      </section>
+    </main>
+  
+  </div>
+
 
   <!-- jQuery -->
   <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+  <script src="./script/script.js"></script>
 </body>
 </html>
