--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
   <header class="header">
     <ul class="header__list">
       <li class="header__list__item">
-        <a href="#reset" class="header__list__item__link">Reset</a>
+        <button class="header__list__item__reset">
+          <div class="header__list__item__reset__arrow">
+            
+          </div>
+        </button>
       </li>
       <li class="header__list__item">
         <p class="header__list__item__timer">00:00</p>
       </li>
     </ul>
   </header>
-  
+
   <div class="wrapper">
 
     <main class="main">
