MVP reached. styled nav and added mediaQueries

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <header class="header">
     <ul class="header__list">
       <li class="header__list__item">
-        <button class="header__list__item__reset">
+        <p class="header__list__item__timer">00:00</p>
+      </li>
+      <li class="header__list__item">
+        <a href="index.html" class="header__list__item__reset">
           <div class="header__list__item__reset__arrow">
             
           </div>
-        </button>
-      </li>
-      <li class="header__list__item">
-        <p class="header__list__item__timer">00:00</p>
+        </a>
       </li>
     </ul>
   </header>
@@ -26,7 +26,12 @@
 
     <main class="main">
       <section class="main__cards-container">
-        
+        <!-- 
+        <div class="main__cards-container__card">
+          <button class="main__cards-container__card__overlay">
+          </button>
+          <img src="${pokemonImageUrl}" alt="${pokemonName}" class="main__cards-container__card__image">
+        </div> -->
       </section>
     </main>
   
