(┬┬﹏┬┬) working on landing page and game over modal in footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
-  <title>Memory ???</title>
+  <link type="image/png" href="assets/favicon.png" rel="icon">
+  <title>PokéMatch</title>
 </head>
 <body>
   <header class="header">
@@ -12,7 +13,6 @@
       <li class="header__list__item">
         <a href="index.html" class="header__list__item__reset">
           <div class="header__list__item__reset__arrow">
-            
           </div>
         </a>
       </li>
@@ -23,20 +23,17 @@
   </header>
 
   <div class="wrapper">
-
     <main class="main">
       <section class="main__cards-container">
-        <!-- 
-        <div class="main__cards-container__card">
-          <button class="main__cards-container__card__overlay">
-          </button>
-          <img src="${pokemonImageUrl}" alt="${pokemonName}" class="main__cards-container__card__image">
-        </div> -->
       </section>
     </main>
-  
   </div>
 
+  <footer class="footer">
+    <div class="footer__landing">
+      <button>Start Game</button>
+    </div>
+  </footer>
 
   <!-- jQuery -->
   <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
