--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Giga&family=Sigmar+One&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="./style/style.css">
   <link type="image/png" href="assets/favicon.png" rel="icon">
   <title>PokéMatch</title>
@@ -11,6 +12,7 @@
   <header class="header">
     <ul class="header__list">
       <li class="header__list__item">
+        <!-- reset game button -->
         <a href="index.html" class="header__list__item__reset">
           <div class="header__list__item__reset__arrow">
           </div>
@@ -25,12 +27,17 @@
   <div class="wrapper">
     <main class="main">
       <section class="main__cards-container">
+        <!-- generate cards with images here -->
       </section>
     </main>
   </div>
 
+  <!-- landing and game over overlay here -->
   <footer class="footer">
     <div class="footer__landing">
+      <div class="footer__landing__logo">
+        <img src="./assets/pokeLogo.png" alt="Pokémon Logo">
+      </div>
       <button>Start Game</button>
     </div>
   </footer>
