--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
   <!-- landing and game over overlay here -->
   <footer class="footer">
     <div class="footer__landing">
-      <div class="footer__landing__logo">
-        <img src="./assets/pokeLogo.png" alt="Pokémon Logo">
+      <div class="wrapper">
+        <div class="footer__landing__logo">
+          <img src="./assets/pokeLogo.png" alt="Pokémon Logo">
+        </div>
+        <div class="footer__landing__welcome">
+          <p>Welcome to PokéMatch! A game to MATCH pairs of Pokémons within a TIME limit. CLICK the start button below when you're READY!</p>
+        </div>
+        <button>Start Game</button>
       </div>
-      <button>Start Game</button>
     </div>
   </footer>
 
