--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
           <img src="./assets/pokeLogo.png" alt="Pokémon Logo">
         </div>
         <div class="footer__landing__welcome">
-          <p>Welcome to PokéMatch! A game to MATCH pairs of Pokémons within a TIME limit. CLICK the start button below when you're READY!</p>
+          <p>Welcome to PokéMatch! A game to MATCH pairs of Pokémons within a TIME limit. CLICK start when you're READY! <button class="footer__landing__welcome__button">START &#9660</button></p>
         </div>
-        <button>Start Game</button>
       </div>
     </div>
   </footer>
