--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
   <!-- landing and game over overlay here -->
   <footer class="footer">
     <div class="footer__landing">
-      <div class="wrapper">
+      <div class="wrapperFooter">
         <div class="footer__landing__logo">
           <img src="./assets/pokeLogo.png" alt="Pokémon Logo">
         </div>
         <div class="footer__landing__welcome">
-          <p>Welcome to PokéMatch! A game to MATCH pairs of Pokémons within a TIME limit. CLICK start when you're READY! <button class="footer__landing__welcome__button">START &#9660</button></p>
+          <p>Welcome to PokéMatch! A game to MATCH pairs of Pokémon within a TIME limit. CLICK start when you're READY!
+            <button class="footer__landing__welcome__button">START <span>&#9660</span></button>
+          </p>
         </div>
       </div>
     </div>
