added animations to start button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="footer__landing__welcome">
           <p>Welcome to PokéMatch! A game to MATCH pairs of Pokémon within a TIME limit. CLICK start when you're READY!
-            <button class="footer__landing__welcome__button">START <span>&#9660</span></button>
+            <button class="footer__landing__welcome__button"><span>&#9654</span>START</button>
           </p>
         </div>
       </div>
