revamped cards styling. fixed accessibility issues. fixed repeat clickcounter bug. ☢

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <li class="header__list__item">
         <!-- reset game button -->
         <a href="index.html" class="header__list__item__reset">
-          <div class="header__list__item__reset__arrow">
-          </div>
+          <div class="header__list__item__reset__arrow"></div>
         </a>
       </li>
       <li class="header__list__item">
