not grid. just fixing the flex

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     <main class="main">
       <section class="main__cards-container">
         <!-- generate cards with images here -->
+        <!--
+        <div class="main__cards-container__card">
+          <button class="main__cards-container__inner" tabindex="0" aria-label="${name}">
+            <div class="main__cards-container__card__front">
+              <img src="./assets/favicon.png" alt="pokeball">
+            </div>
+            <div class="main__cards-container__card__back">
+              <img src="${image}" alt="${name}" class="main__cards-container__card__image">
+            </div>
+          </button>
+        </div>
+        -->
       </section>
     </main>
   </div>
