added styles to header

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 </head>
 <body>
   <header class="header">
-    <ul class="header__list">
-      <li class="header__list__item">
-        <!-- reset game button -->
-        <a href="index.html" class="header__list__item__reset">
-          <div class="header__list__item__reset__arrow"></div>
-        </a>
-      </li>
-      <li class="header__list__item">
-        <p class="header__list__item__timer">0</p>
-      </li>
-    </ul>
+    <div class="warpper">
+
+      <ul class="header__list">
+        <li class="header__list__item">
+          <!-- reset game button -->
+          <a href="index.html" class="header__list__item__reset">
+            <div class="header__list__item__reset__arrow"></div>
+            <span>Restart</span>
+          </a>
+        </li>
+        <li class="header__list__item">
+          <p class="header__list__item__timer">0</p>
+        </li>
+      </ul>
+    </div>
   </header>
 
   <div class="wrapper">
